src/components/Main/main.module.scss
// main.module.scss

@keyframes slideInFromRight {
  from {
    transform: translateX(100%);
    opacity: 0;
  }
  to {
    transform: translateX(0);
    opacity: 1;
  }
}

@keyframes slideOutToLeft {
  from {
    transform: translateX(0);
    opacity: 1;
  }
  to {
    transform: translateX(-100%);
    opacity: 0;
  }
}

@keyframes slideInFromLeft {
  from {
    transform: translateX(-100%);
    opacity: 0;
  }
  to {
    transform: translateX(0);
    opacity: 1;
  }
}

@keyframes slideOutToRight {
  from {
    transform: translateX(0);
    opacity: 1;
  }
  to {
    transform: translateX(100%);
    opacity: 0;
  }
}

.fadeInSlideInFromRight {
  animation: slideInFromRight 0.5s forwards;
}

.fadeOutSlideOutToLeft {
  animation: slideOutToLeft 0.5s forwards;
}

.fadeInSlideInFromLeft {
  animation: slideInFromLeft 0.5s forwards;
}

.fadeOutSlideOutToRight {
  animation: slideOutToRight 0.5s forwards;
}

.container {
  position: relative;
  height: 100%; // Ensure this is set so the absolute positioning works as expected
}

.component {
  position: absolute;
  width: 100%;
  height: 100%;
  // Remove visibility toggles if previously added
}

.hidden {
  visibility: hidden;
  position: absolute;
  width: 100%;
}

.visible {
  visibility: visible;
  position: relative;
}

